<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY version "v0.6.4.3.1">]>
<resources>
    <string name="app_name">Mealplanner</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="add_gerichte_float_button">Add meal</string>
    <string name="gericht_name">Meal name</string>
    <string name="zutat">Ingredient</string>
    <string name="vegetarisch">Vegetarian</string>
    <string name="hinzuf_gen">Add</string>
    <string name="wochenplaner">Weekly planner</string>
    <string name="neuer_plan">New plan</string>
    <string name="datenLoeschen">Delete data</string>
    <string name="gericht_bearbeiten">Edit meal</string>
    <string name="gerichteliste">List of meals</string>
    <string name="einkaufsliste">Shopping list</string>
    <string name="deine_gerichte">Your meals</string>
    <string name="gerichtPlaceholderText">Meal</string>
    <string name="zutatenPlaceholderText">Ingredients</string>
    <string name="sortierenNach">sort by…</string>
    <string name="alphabetischAtoZ">(a-z)</string>
    <string name="alphabetischZtoA">(z-a)</string>
    <string name="sortierenNachVegetarisch">veggie</string>
    <string name="mealAdd">Add meal</string>
    <string name="mealAddNew">Neues Gericht hinzufügen</string>
    <string name="mealAddNewMessage">Add a new meal by yourself or by using Chefkoch.de.</string>
    <string name="authorOnChefkoch">by %1$s on Chefkoch.de</string>
    <string name="wasAddedText">" was added."</string>
    <string name="textAlreadyInList">" is already in the list."</string>
    <string name="textErrorAtMealAdd">Meal couldn\'t be added. Check input?</string>
    <string name="textCreateNewPlan">Create new plan?</string>
    <string name="textWarningLosingOldPlan">The old plan is lost.</string>
    <string name="textOK">OK</string>
    <string name="textNewPlanWasCreated">New plan was created.</string>
    <string name="textNotEnoughMeals">Not enough meals available.</string>
    <string name="textNotEnoughMealsDesc">Your list of meals does not have enough entries to create a weekly plan. (>=7)</string>
    <string name="aendern">Submit</string>
    <string name="namen_ndern">Change name:</string>
    <string name="zutaten_ndern">Change Ingredients:</string>
    <string name="textZutatBearbeiten">Change ingredient</string>
    <string name="abbrechen">Cancel</string>
    <string name="deleteDataFromPhone">Delete all data from the device?</string>
    <string name="deleteDataFromPhoneMessage">Are you sure that you want do delete all data from the device? This can not be undone.</string>
    <string name="allDataDeletedText">All data was successfully deleted.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="textZutatHinzufuegen">Add ingredient to meal</string>
    <string name="zutat_hinzuf_gen">Add ingredient</string>
    <string name="addedSuccessfully">was added successfully.</string>
    <string name="deleteGericht">Delete Meal</string>
    <string name="deleteGerichtText">Are you sure you want to delete this meal? It\'s no longer available after this action.</string>
    <string name="fragment_two_add_ingredient_title">Add Ingredient(s)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_hint">search…</string>s
    <string name="about">About</string>

    <string name="aboutText">©Pascal Kühnold\nThis app is developed by Pascal Kühnold.</string>

    <string name="attribution_text">
        <div>\nIcons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
        </div>
        <div><a href="https://www.chefkoch.de" title="www.chefkoch.de">\n\nChefkoch.de</a></div>
    </string>
    <string name="welcomeText">&version;\nHey, thanks a lot for testing my App!\n
        \nThe App is still in development and it could be possible that you may run into problems.\n
        \nIf so, I would appreciate it if you could tell me where this problem occurred.\n
        \nShould you come across serious errors, such as the app crashing, please send me a message as well.\n
        \nAlso it would be best if you can add where it happened and what you were exactly doing.\n
        \nSince the app is still under development, it is possible that larger parts of the backend side will change.\n
        \nWhich may mean that the App needs to be reinstalled.\n
        \nAll previously entered data will be deleted.\n
        \nPlease be aware of this.\n\n
        \nIf you have any suggestions or ideas to improve the App, please feel free to contact me.\n\n
        \nThe app is currently using Chefkoch.de as a way to add meals.\nThat means that you need to have an Internet-connection(WLAN recommended because of data use) and should be aware that you are directed to an external link.\n\n
        \nHave fun testing!\n
        \nPascal
    </string>


    <string name="alles_klar">Alright</string>
    <string name="welcomeHeadline">Welcome to the mealplanner</string>
    <string name="dontDisplayAnymore">Don\'t show again</string>
    <string name="wochenplanerveggie">Weekly planner veggie</string>
    <string name="einkaufsliste_background_texture">einkaufsliste_background_texture</string>
    <string name="is_checked_in_list">Is checked in list</string>
    <string name="leftPositions">Open Positions: %1$d</string>
    <string name="f_r_mehr_als_einen_tag">Meal for multiple days</string>
    <string name="schnelle_zubereitung">Fast preparation</string>
    <string name="gerichtNameInfo">Meal name: </string>
    <string name="zutatenInfo">Ingredients: </string>
    <string name="information">Information</string>
    <string name="rezeptAnsicht">Show Receipt </string>
    <string name="textNotEnoughMealsVeggie">You don\'t have enough Veggie meals.</string>
    <string name="textNotEnoughMealsDescVeggie">You need at least 7 Veggie meals to create a Weekly Veggie planner</string>
    <string name="findRecipe">Find Recipe</string>
    <string name="gerichtAnzeigen">Show meal</string>
    <string name="noInputFound">No Input</string>
    <string name="eintragItem">"Item %1$s "</string>
    <string name="externalLinkInfo">By continuing you will be forwarded to Chefkoch.de!\nAn Internetconnection is necessary.\nWLAN is recommended.\n\n</string>
    <string name="desiredMeal">Here you can enter a headword and you can search for a recipe with that word by continuing.\n</string>
    <string name="externalLinkTitle">Weiterleitende Verlinkung</string>
    <string name="chefkochMealCouldNotBeAdded">Meal couldn\'t be added. Did you use a correct recipe site?</string>
    <string name="chefkochMealAddError">Please use a correct recipe link.</string>
    <string name="title_activity_gericht">Gericht Informationen</string>
    <string name="veggie_meal">Veggie meal</string>
    <string name="chefkoch_logo">Chefkoch Logo</string>
    <string name="attribution">Attribution:</string>
    <string name="new_position">New Position…</string>
    <string name="meal">Meal</string>
    <string name="preperation">Preparation</string>
    <string name="monday_short">Mo.</string>
    <string name="name_of_author">Name of the author</string>
    <string name="duration">Duration:</string>
    <string name="to_the_creator_website">To creator site</string>
    <string name="description_own_meal">Description of your meal</string>
    <string name="own_meal">Own Meal</string>
    <string name="via_chefkoch">Via Chefkoch.de</string>
    <string name="description_via_chefkoch_meal">Description via Chefkoch</string>
    <string name="show_welcome_message">Show welcome message</string>
    <string name="open_weeklyplanner_settings">Open weekly planner settings</string>
    <string name="fragment_one_add_meal_name_title">Add meal name</string>
    <string name="fragment_three_add_cooktime_title">Add cooktime</string>
    <string name="fragment_four_add_veggieOrNot_title">Veggie/Vegan</string>
    <string name="fragment_five_add_multiple_days_title">For multiple days</string>
    <string name="fragment_six_add_preperation_text_title">Add preparation text</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="terms_of_service_title">Terms of Service</string>
    <string name="search_bar">Searchbar</string>
    <string name="ad_banner">Ad banner</string>
    <string name="schlie_en">Close</string>
    <string name="zutat_erfolgreich_bearbeitet">The ingredient was successfully edited.</string>
    <string name="eingabe_nicht_gespeichert">Changes were not changed.</string>
    <string name="aenderungen_speichern">Save the changes?</string>
    <string name="versionNumber">&version;</string>
    <string name="dropdown_menu">Dropdown Menu</string>
    <string name="browser_fenster_mit_chefkoch_de">Browser Window with Chefkoch.de</string>
    <string name="veggie_meal_icon">Veggie Meal Icon</string>
    <string name="day_of_the_week">Day of the Week</string>
    <string name="inputFieldKeyword">Inputfield for Keyword to search for</string>
    <string name="enterKeyword">Enter keyword</string>
    <string name="zutat_bearbeiten">Edit ingredient</string>
    <string name="zutaten_name_ndern">Change ingredient name:</string>
    <string name="zutatenname">Ingredient name</string>
    <string name="zutaten_menge_ndern">Change ingredient count:</string>
    <string name="numberFiller">0</string>
    <string name="zutaten_mengeneinheit_ndern">Change ingredient unit:</string>
    <string name="ingredient_unit_example">ml</string>
    <string name="change">Change</string>
    <string name="add_meal_to_your_list_icon">Add Meal to your list icon</string>
    <string name="einkaufsliste_loeschen">Shopping List will be deleted. Continue?</string>
    <string name="deletedSuccessfully">was deleted successful.</string>
    <string name="ingredientsFromMealWasAddedSuccessful">Ingredients from %1$s were successfully added to the shopping list."</string>
    <string name="addedSuccessfullToShoppingList">%1$s was added successful to the shoppinglist.</string>
    <string name="ingredientWasSuccessfullyChanged"> was changed successful.</string>
    <string name="wocheneinstellung">"Week Settings"</string>
    <string name="group">Group</string>
</resources>