<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newBackgroundColor"
    android:layout_gravity="center"
    >


    <TextView
        android:id="@+id/ingredientChangeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zutat_bearbeiten"
        android:textColor="@color/white"
        android:textSize="@dimen/maxFontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextZutatenNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingredientChangeHeader"
        android:hint="@string/zutaten_name_ndern"
        app:expandedHintEnabled="false"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextZutatenName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zutatenname"
            android:background="@color/newBackgroundColor"
            android:backgroundTint="@color/newBackgroundColor"
            android:textColor="@color/white"
            android:textColorHint="@color/lightGreyAlpha75"
            android:gravity="center"
            android:textSize="18sp"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextMengeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextZutatenNameLayout"
        android:hint="@string/zutaten_menge_ndern"
        app:expandedHintEnabled="false"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/numberFiller"
            android:background="@color/newBackgroundColor"
            android:backgroundTint="@color/newBackgroundColor"
            android:textColor="@color/white"
            android:textColorHint="@color/lightGreyAlpha75"
            android:gravity="center"
            android:textSize="18sp"
            android:inputType="number"
            android:autofillHints=""
            />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextZutatenEinheitLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMengeLayout"
        android:hint="@string/zutaten_mengeneinheit_ndern"
        app:expandedHintEnabled="false"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextZutatenEinheit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/ingredient_unit_example"
            android:background="@color/newBackgroundColor"
            android:backgroundTint="@color/newBackgroundColor"
            android:textColor="@color/white"
            android:textColorHint="@color/lightGreyAlpha75"
            android:gravity="center"
            android:textSize="18sp"
            />

    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/btnChangeIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextZutatenEinheitLayout" />
    <Button
        android:id="@+id/btnDeleteZutat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/delete"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeIngredient" />


    <Button
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schlie_en"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeleteZutat" />




</androidx.constraintlayout.widget.ConstraintLayout>