<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.pascalkuehnold.essensplaner.MainActivity">

    <group>
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info"
            android:orderInCategory="0"
            android:title="@string/about"

            app:showAsAction="never" />
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="1"
            android:title="@string/action_settings"
            app:showAsAction="never" />

    </group>

    <!--<group>
        <item
            android:id="@+id/menu_privacy_policy"
            android:orderInCategory="2"
            android:title="@string/privacy_policy_title"
            />

        <item
            android:id="@+id/menu_terms_of_service"
            android:orderInCategory="3"
            android:title="@string/terms_of_service_title" />
    </group>
    -->

    <item
        android:orderInCategory="3"
        android:id="@+id/datenbankLoeschen"
        android:title="@string/datenLoeschen" />



</menu>