<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:background="@color/newBackgroundColor"
        android:paddingVertical="10dp"
        android:id="@+id/layout_btn_custom_tab_add_meal"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        android:contentDescription="@string/mealAddNew"
        >


        <ImageView
            android:id="@+id/btn_custom_tab_add_meal"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_add_to_shoppinglist"
            android:contentDescription="@string/add_meal_to_your_list_icon" />


    </LinearLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_btn_custom_tab_add_meal"
        android:visibility="visible"
        android:contentDescription="@string/browser_fenster_mit_chefkoch_de"
        />


</RelativeLayout>