<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/statsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_vegetarian"
            android:layout_weight="1"

            android:contentDescription="@string/vegetarisch" />

        <TextView
            android:id="@+id/tvMealCookTime"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/duration"
            android:layout_weight="1"
            android:maxLines="2"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            />


        <TextView
            android:id="@+id/originalRecipeWebsite"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/to_the_creator_website"
            android:layout_weight="1"
            android:textColor="@color/white"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>