<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Essensplaner.AppBarOverlay">


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnAlleGerichteAnzeigen"
            android:layout_width="250dp"
            android:layout_height="78dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="48dp"
            android:layout_weight="1"
            android:text="@string/gerichteliste"
            android:textSize="22sp"

            app:backgroundTint="@color/mainGreen"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnWochenplaner"
            android:layout_width="250dp"
            android:layout_height="78dp"
            android:layout_margin="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_weight="1"
            android:text="@string/wochenplaner"
            android:textSize="22sp"
            app:backgroundTint="@color/mainGreen"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAlleGerichteAnzeigen" />

        <Button
            android:id="@+id/btnEinkaufsliste"
            android:layout_width="250dp"
            android:layout_height="78dp"
            android:layout_margin="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_weight="1"
            android:text="@string/einkaufsliste"
            android:textSize="22sp"
            app:backgroundTint="@color/mainGreen"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnWochenplaner" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:clickable="true"
            android:contentDescription="@string/add_gerichte_float_button"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_input_add" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="center"
        app:popupTheme="@style/Theme.Essensplaner.PopupOverlay" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>