<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewMainMenu2022"

    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Essensplaner.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardVMainMealList"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@id/cardVMainWeeklyplanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:focusable="false"



        >

        <RelativeLayout
            android:id="@+id/layoutMainMealList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/newBackgroundColor"
            android:paddingVertical="10dp"
            android:clickable="true"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center" >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_meal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gerichteliste"
                    android:textColor="@color/lightGreyAlpha75"
                    android:textSize="28sp"
                    android:fontFamily="@font/architects_daughter_regular"
                    />

            </LinearLayout>


        </RelativeLayout>




    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardVMainWeeklyplanner"
        app:layout_constraintBottom_toTopOf="@id/cardVMainShoppingList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"

        >

        <RelativeLayout
            android:id="@+id/layoutMainWeeklyplanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/newBackgroundColor"
            android:paddingVertical="10dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center" >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_schedule"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wochenplaner"
                    android:textColor="@color/lightGreyAlpha75"
                    android:textSize="28sp"
                    android:fontFamily="@font/architects_daughter_regular"
                    />

            </LinearLayout>


        </RelativeLayout>




    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardVMainShoppingList"
        app:layout_constraintBottom_toTopOf="@id/cardVMainGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"


        >

        <RelativeLayout
            android:id="@+id/layoutMainShoppingList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/newBackgroundColor"
            android:paddingVertical="10dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center" >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_shopping_list"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/einkaufsliste"
                    android:textColor="@color/lightGreyAlpha75"
                    android:textSize="28sp"
                    android:fontFamily="@font/architects_daughter_regular"
                    />

            </LinearLayout>


        </RelativeLayout>




    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardVMainGroup"
        app:layout_constraintBottom_toTopOf="@id/mainMenuBottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"

        >

        <RelativeLayout
            android:id="@+id/layoutMainGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/newBackgroundColor"
            android:paddingVertical="10dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center" >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_team"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group"
                    android:textColor="@color/lightGreyAlpha75"
                    android:textSize="28sp"
                    android:fontFamily="@font/architects_daughter_regular"
                    />

            </LinearLayout>


        </RelativeLayout>




    </androidx.cardview.widget.CardView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/mainMenuBottomNav"
        android:layout_width="0dp"
        android:layout_height="@dimen/bottomNavBar"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="?android:attr/windowBackground"
        app:itemTextColor="@color/lightGreyAlpha75"
        app:menu="@menu/app_menu"
        app:labelVisibilityMode="labeled"
        />


</androidx.constraintlayout.widget.ConstraintLayout>